      o Put counters in efn, egr ??
      o Set up optimrx on R-forge or/and github, and optimr for CRAN with only
	optim, nlm, nlminb, Rvmmin, Rtnmin, Rcgmin and hjn methods.
	Consider check to see if other package is loaded e.g., don't want
	optimr and optimrx to be loaded simulataneously, but possibly R takes
	care of that.
      o Check all failures reported below are fixed!

VERSION 2017-02-15
      o added subplex method

VERSION 2016-09-16
      o Harry Joe reported troubles with numerical gradient approximations. Found
        	some glitches and conflicts to fix. Also documentation is less than ideal.
        Scaling spar to par was INSIDE control$trace

VERSION 2016-08-16
      o checked and released on CRAN

VERSION 2016-07-10
      o hessian=TRUE is NOT properly executed
      o Test function hobbs15b illustrates different scalings across all methods
      o Appropriate lists of "ALL", "bounded" and "masked" methods are defined 
        in the ctrldefault() function.
      o jonesrun L-BFGS-B fails with numerical gradient approximation.
      o dfoptim hjkb was fixed by Ravi Varadhan

VERSION 2016-07-03
      o Move allmeth, bdmeth, maskmeth into ctrldefault so we have just in
	one place. Note that this will change with optimr/optimrx
      o Masks for hjn(), and incorporate hjn in optimr
      o time (xtimes) removed from optimr, but timing is included in opm()
      o polyalgorithm wrapper polyopt() included and documented with example
      o multistart wrapper multistart() included and documented with example
      o renamed coef.optimx to coef.opm

VERSION 2016-06-28
      o Checked that controls do not conflict, e.g., maximize and fnscale. Note that
        maximize is NOT in optim() call.
      o Checked and fixed scaling of bounds in optimr. However, hjkb seems to fail
      o Creates scbdtest.R,  a test function that is simple but bounded and scaled badly
      o Get routines from optextras rather than have duplicates in optimr