@@ -1,6 +1,6 @@
 Package: optimrx
-Version: 2017-2.15
-Date: 2017-2-15
+Version: 2017-4.5
+Date: 2017-04-05
 Title: Expanded Replacement and Extension of the 'optim' Function
 Authors@R: c( person(given = c("John", "C"), family = "Nash", role =
     c("aut", "cre"), email = "nashjc@uottawa.ca"), person(given =
